# alalgorithm_2024

./: CMakeLists.txt  README.md  main.cpp  maintest.cpp
acwing/dp_study/: 01_Backpack_issue.cpp  01_Backpack_issue_dp.cpp
baidu_q/: baidu_q_1.cpp  baidu_q_1.py  baidu_q_2.cpp  baidu_q_3.cpp  xm.cpp
dewu/: dewu_1.cpp  dewu_2.cpp
huawei/: huawei_1.cpp  huawei_1_2.cpp  huawei_2.cpp  huawei_3.cpp  q2.py
huawei_1m/: h1m_1.cpp
jd/: jd_1.cpp  jd_1_again.cpp  jd_2.cpp  jd_3.cpp  p1.py
leetcode/: 100-same-tree.cpp  101-symmetric-tree.cpp  102-binary-tree-level-order-traversal.cpp  103-binary-tree-zigzag-level-order-traversal.cpp  104-maximum-depth-of-binary-tree.cpp  110-balanced-binary-tree.cpp  1137-n-th-tribonacci-number.cpp  114-longest-common-subsequence.cpp  131-palindrome-partitioning.cpp  141-linked-list-cycle.cpp  142-linked-list-cycle-ii.cpp  143-reorder-list.cpp  146-lru-cache.cpp  15-3sum.cpp  153-find-minimum-in-rotated-sorted-array.cpp  162-find-peak-element.cpp  169-majority-element.cpp  17-letter-combinations-of-a-phone-number.cpp  1702-maximum-binary-string-after-change.cpp  189-rotate-array.cpp  19-remove-nth-node-from-end-of-list.cpp  199-binary-tree-right-side-view.cpp  1997-first-day-where-you-have-been-in-all-the-rooms.cpp  20-valid-parentheses.cpp  200-number-of-islands.cpp  206-reverse-linked-list.cpp  209-minimum-size-subarray-sum.cpp  21-merge-two-sorted-lists.cpp  2126-destroying-asteroids.cpp  215-kth-largest-element-in-an-array.cpp  216-combination-sum-iii.cpp  2160-minimum-sum-of-four-digit-number-after-splitting-digits.cpp  22-generate-parentheses.cpp  235-lowest-common-ancestor-of-a-binary-search-tree.cpp  236-lowest-common-ancestor-of-a-binary-tree.cpp  237-delete-node-in-a-linked-list.cpp  25-reverse-nodes-in-k-group.cpp  3-longest-substring-without-repeating-characters.cpp  300-longest-increasing-subsequence.cpp  3080-mark-elements-on-array-by-performing-queries.cpp  (+35 more)
leetcode/contest/132_double/: clear-digits.cpp  find-the-first-player-to-win-k-games-in-a-row.cpp
leetcode/dynamic_programming/: 01.03.string-to-url-lcci.py  121-best-time-to-buy-and-sell-stock.cpp  198-house-robber.cpp  2266-count-number-of-texts.cpp  2466-count-ways-to-build-good-strings.cpp  322-coin-change.cpp  377-combination-sum-iv.cpp  494-target-sum.cpp  5-longest-palindromic-substring.cpp  62-unique-paths.cpp  63-unique-paths-ii.cpp  64-minimum-path-sum.cpp  70-climbing-stairs.cpp  72-edit-distance.cpp  746-min-cost-climbing-stairs.cpp
luogu/: B2005.cpp  B2025.cpp  P1085.cpp  P5704.cpp  P5705.cpp  P5707.cpp  P5717.cpp
meituan/: meituan_1.cpp  meituan_2.cpp  meituan_2.py  meituan_3.cpp  meituan_4.cpp  meituan_5.cpp  meituan_5.py
meituan2/: q1.cpp
meituan_qiuzhao/: mq_1.cpp  mq_2.cpp  mq_2.py  mq_3.cpp
ouye/: ouye_1.cpp
pdd/: 01.cpp  02.cpp
pdd-spring/: pdd1.cpp  pdd2.cpp  pdd3.cpp
pdd_qiuzhao/: pdd_1.cpp  pdd_2.cpp  pdd_3.cpp  pdd_4.cpp  pdd_test.cpp
shenxinfu/: s_01.cpp
sort/: quick_sort.cpp
tanch25/: a.cpp  ali.py  c.cpp  j.cpp  light.cpp  perfect.cpp
test/: test1.cpp
tx/: 001.cpp  001.py  002.cpp  003.cpp  005.cpp  tx.cpp  tx_001.cpp
tx03/: tx03-1.cpp  tx03-2.cpp
tx_wxpay/: tx_wxpay.cpp
wy/: 1.cpp  2.cpp  3.cpp  4.cpp
xiaomi/: xiaomi_1.cpp  xiaomi_1.py  xiaomi_2.cpp
xiecheng/: x_2.cpp  x_3.cpp  x_3.py  x_4.cpp  x_4.py
zhongxing/: zhongxing_1.cpp  zhongxing_2.cpp  zhongxing_3.cpp
