cmake_minimum_required(VERSION 3.27)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)
MATH(EXPR stack_size "40*1024*1024")
set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")

add_executable(algorithm main.cpp)

add_executable(test leetcode/test.cpp)
add_executable(3-longest-substring-without-repeating-characters leetcode/3-longest-substring-without-repeating-characters.cpp)
add_executable(206-reverse-linked-list leetcode/206-reverse-linked-list.cpp)
add_executable(146-lru-cache leetcode/146-lru-cache.cpp)
add_executable(215-kth-largest-element-in-an-array leetcode/215-kth-largest-element-in-an-array.cpp)
add_executable(25-reverse-nodes-in-k-group leetcode/25-reverse-nodes-in-k-group.cpp)
add_executable(QuickSort leetcode/QuickSort.cpp)
add_executable(15-3sum leetcode/15-3sum.cpp)
add_executable(53-maximum-subarray leetcode/53-maximum-subarray.cpp)
add_executable(01_Backpack_issue acwing/dp_study/01_Backpack_issue.cpp)
add_executable(01_Backpack_issue_dp acwing/dp_study/01_Backpack_issue_dp.cpp)
add_executable(70-climbing-stairs leetcode/dynamic_programming/70-climbing-stairs.cpp)
add_executable(5-longest-palindromic-substring leetcode/dynamic_programming/5-longest-palindromic-substring.cpp)
add_executable(62-unique-paths leetcode/dynamic_programming/62-unique-paths.cpp)
add_executable(63-unique-paths-ii leetcode/dynamic_programming/63-unique-paths-ii.cpp)
add_executable(64-minimum-path-sum leetcode/dynamic_programming/64-minimum-path-sum.cpp)
add_executable(72-edit-distance leetcode/dynamic_programming/72-edit-distance.cpp)
add_executable(912-sort-an-array leetcode/912-sort-an-array.cpp)
add_executable(21-merge-two-sorted-lists leetcode/21-merge-two-sorted-lists.cpp)
add_executable(102-binary-tree-level-order-traversal leetcode/102-binary-tree-level-order-traversal.cpp)
add_executable(33-search-in-rotated-sorted-array leetcode/33-search-in-rotated-sorted-array.cpp)
add_executable(200-number-of-islands leetcode/200-number-of-islands.cpp)
add_executable(80-remove-duplicates-from-sorted-array-ii leetcode/80-remove-duplicates-from-sorted-array-ii.cpp)
add_executable(169-majority-element leetcode/169-majority-element.cpp)
add_executable(189-rotate-array leetcode/189-rotate-array.cpp)
add_executable(55-jump-game leetcode/55-jump-game.cpp)
add_executable(45-jump-game-ii leetcode/45-jump-game-ii.cpp)
add_executable(380-insert-delete-getrandom-o1 leetcode/380-insert-delete-getrandom-o1.cpp)
add_executable(01 pdd/01.cpp)
add_executable(02 pdd/02.cpp)
add_executable(236-lowest-common-ancestor-of-a-binary-tree leetcode/236-lowest-common-ancestor-of-a-binary-tree.cpp)
add_executable(695-max-area-of-island leetcode/695-max-area-of-island.cpp)
add_executable(827-making-a-large-island leetcode/827-making-a-large-island.cpp)
add_executable(739-daily-temperatures leetcode/739-daily-temperatures.cpp)
add_executable(463-island-perimeter leetcode/463-island-perimeter.cpp)
add_executable(1997-first-day-where-you-have-been-in-all-the-rooms leetcode/1997-first-day-where-you-have-been-in-all-the-rooms.cpp)
add_executable(54-spiral-matrix leetcode/54-spiral-matrix.cpp)
add_executable(46-permutations leetcode/46-permutations.cpp)
add_executable(31-next-permutation leetcode/31-next-permutation.cpp)
add_executable(300-longest-increasing-subsequence leetcode/300-longest-increasing-subsequence.cpp)
add_executable(92-reverse-linked-list-ii leetcode/92-reverse-linked-list-ii.cpp)
add_executable(1 wy/1.cpp)
add_executable(2 wy/2.cpp)
add_executable(3 wy/3.cpp)
add_executable(4 wy/4.cpp)
add_executable(001 tx/001.cpp)
add_executable(002 tx/002.cpp)
add_executable(003 tx/003.cpp)
add_executable(005 tx/005.cpp)
add_executable(894-all-possible-full-binary-trees leetcode/894-all-possible-full-binary-trees.cpp)
add_executable(1702-maximum-binary-string-after-change leetcode/1702-maximum-binary-string-after-change.cpp)
add_executable(42-trapping-rain-water leetcode/42-trapping-rain-water.cpp)
add_executable(209-minimum-size-subarray-sum leetcode/209-minimum-size-subarray-sum.cpp)
add_executable(713-subarray-product-less-than-k leetcode/713-subarray-product-less-than-k.cpp)
add_executable(meituan_1 meituan/meituan_1.cpp)
add_executable(meituan2 meituan/meituan_2.cpp)
add_executable(meituan_3 meituan/meituan_3.cpp)
add_executable(meituan_4 meituan/meituan_4.cpp)
add_executable(meituan_5 meituan/meituan_5.cpp)
add_executable(34-find-first-and-last-position-of-element-in-sorted-array leetcode/34-find-first-and-last-position-of-element-in-sorted-array.cpp)
add_executable(162-find-peak-element leetcode/162-find-peak-element.cpp)
add_executable(153-find-minimum-in-rotated-sorted-array leetcode/153-find-minimum-in-rotated-sorted-array.cpp)
add_executable(tx tx/tx.cpp)
add_executable(huawei_1 huawei/huawei_1.cpp)
add_executable(huawei_2 huawei/huawei_2.cpp)
add_executable(huawei_3 huawei/huawei_3.cpp)
add_executable(huawei_1_2 huawei/huawei_1_2.cpp)
add_executable(460-lfu-cache leetcode/460-lfu-cache.cpp)
add_executable(test1 test/test1.cpp)
add_executable(2126-destroying-asteroids leetcode/2126-destroying-asteroids.cpp)
add_executable(3080-mark-elements-on-array-by-performing-queries leetcode/3080-mark-elements-on-array-by-performing-queries.cpp)
add_executable(binary_search_red_blue Study_lingchashan/binary_search_red_blue.cpp)
add_executable(876-middle-of-the-linked-list leetcode/876-middle-of-the-linked-list.cpp)
add_executable(141-linked-list-cycle leetcode/141-linked-list-cycle.cpp)
add_executable(142-linked-list-cycle-ii leetcode/142-linked-list-cycle-ii.cpp)
add_executable(143-reorder-list leetcode/143-reorder-list.cpp)
add_executable(237-delete-node-in-a-linked-list leetcode/237-delete-node-in-a-linked-list.cpp)
add_executable(19-remove-nth-node-from-end-of-list leetcode/19-remove-nth-node-from-end-of-list.cpp)
add_executable(83-remove-duplicates-from-sorted-list leetcode/83-remove-duplicates-from-sorted-list.cpp)
add_executable(82-remove-duplicates-from-sorted-list-ii leetcode/82-remove-duplicates-from-sorted-list-ii.cpp)
add_executable(104-maximum-depth-of-binary-tree leetcode/104-maximum-depth-of-binary-tree.cpp)
add_executable(100-same-tree leetcode/100-same-tree.cpp)
add_executable(101-symmetric-tree leetcode/101-symmetric-tree.cpp)
add_executable(110-balanced-binary-tree leetcode/110-balanced-binary-tree.cpp)
add_executable(199-binary-tree-right-side-view leetcode/199-binary-tree-right-side-view.cpp)
add_executable(98-validate-binary-search-tree leetcode/98-validate-binary-search-tree.cpp)
add_executable(235-lowest-common-ancestor-of-a-binary-search-tree leetcode/235-lowest-common-ancestor-of-a-binary-search-tree.cpp)
add_executable(103-binary-tree-zigzag-level-order-traversal leetcode/103-binary-tree-zigzag-level-order-traversal.cpp)
add_executable(513-find-bottom-left-tree-value leetcode/513-find-bottom-left-tree-value.cpp)
add_executable(17-letter-combinations-of-a-phone-number leetcode/17-letter-combinations-of-a-phone-number.cpp)
add_executable(78-subsets leetcode/78-subsets.cpp)
add_executable(131-palindrome-partitioning leetcode/131-palindrome-partitioning.cpp)
add_executable(2160-minimum-sum-of-four-digit-number-after-splitting-digits leetcode/2160-minimum-sum-of-four-digit-number-after-splitting-digits.cpp)
add_executable(77-combinations leetcode/77-combinations.cpp)
add_executable(216-combination-sum-iii leetcode/216-combination-sum-iii.cpp)
add_executable(22-generate-parentheses leetcode/22-generate-parentheses.cpp)
add_executable(51-n-queens leetcode/51-n-queens.cpp)
add_executable(198-house-robber leetcode/dynamic_programming/198-house-robber.cpp)
add_executable(494-target-sum leetcode/dynamic_programming/494-target-sum.cpp)
add_executable(322-coin-change leetcode/dynamic_programming/322-coin-change.cpp)